--- a/twosides.tex
+++ b/twosides.tex
@@ -1,18 +1,27 @@
 %!TEX root = main.tex
 
 
-While the previous chapter addressed a question that emerges from the academic literature: are there efficient, budget constrained mechanisms that efficiently aggregate information to aid a decision maker, without forcing the decision makers hand to obtain good incentives for experts. It does so using tools which are relatively standard in that literature (Bayes Nash Equilibria of a one shot game), the heavy use of common priors makes them impractical. It is hard to imagine many situations in which the experts would agree on a prior and a signal space in the current moment (through in the future for decisions that are largely based on analysis of biomedical images and samples that are allready digitalized this might become feasable). 
+While the previous chapter addressed a question that emerges from the academic literature: are there efficient, budget constrained mechanisms that efficiently aggregate information to aid a decision maker, without forcing the decision makers hand to obtain good incentives for experts? It does so using tools which are relatively standard in that literature (the Bayes Nash Equilibria of a one shot game under a correct common prior), the heavy use of common priors makes them impractical. It is hard to imagine many situations in which the experts would agree on a prior and a signal space \footnote{In the future for decisions that are largely based on analysis of biomedical images and lab results this might become feasable.}
 
-Further, the natural world scenarios that motivate the mechanism are much more naturally cast not as one shot interactions, but as repeated games with a sequence of subjects who seek advice. Ideally we would like the pool of avaialble experts to also be changing (through to obtain nontrivial bounds beyond the repeated setting it must be that this change is sufficiently slow). We follow some early work in this direction, but instead of searching for fairly generic bounds on the perforrmance of such mechanisms, we seek a practical mechanism for the particular case of advice under subject freedom.
+Further, the natural world scenarios that motivate the mechanism are much more naturally cast not as one shot interactions, but as repeated games with a sequence of subjects who seek advice before making some common decision. 
+%Ideally we would like the pool of avaialble experts to also be changing (through to obtain nontrivial bounds beyond the repeated setting it must be that this change is sufficiently slow).
+We follow some early work in this direction, but instead of searching for fairly generic bounds on the perforrmance of such mechanisms, we seek a practical mechanism for the particular case of advice under subject freedom.
 
 We consider a sequence of subjects each eliciting advice from a fixed set of experts and choosing an action which only affect themselves directly. This combines the central aspects of bandits with compliance awareness (a sequence of choices and learning from past experience, including noncompliance) and elicitation of information form experts to enable optimal decisions without the advice being bounding. 
+Bounded regret algorithms with compliance awareness can be seen as addressing the special case where the experts signals are known apriori to be uninformative, and thus only the experience can be learned from. Our one-decision mechanism is the special case for $T={1}$, thus there is no role for exploration or learning from experience, since there are no future decisions  to help inform.
 
-Bounded regret algorithms with compliance awareness can be seen as addressing the special case where the experts signals are known apriori to be uninformative, and thus only the experience can be learned from. Our one-decision mechanism is the special case for $T={1}$, thus there is no role for exploration, since there are no future decisions  to help inform.
 
-The key conceptual insight is to link the benefits of exploration to the payoffs of the experts that choose actions that carry it out, by linking the payments the experts receive to the rewards of all future periods.
-We further describe a instatiation of this mechanisms where experts use a combination of bids and signals, that may be able to 
+To create the right incentives for motivating exploratory choices, we show that the choice of action must be linked not just to the reward on the period it is taken, but to the full stream of future rewards after it. While this is sufficient to provide a generalization under a common prior of the one shot mechanisms explored preivously, we also show that the the dynamic setting allows for the mechanism 
 
-On a more speculative note, we present a plausibly practical mechanism for the repeated setting that is asymptotically efficient and truthfull.
+% note if ou depedent on someone else info to show yours is useful, it si nto possible for strict dominant strategy for you (since when they report at random with the prior, you cant possibly do better than randomizing, no matter how many rounds we observe). 
+% OTOH 
+
+
+
+
+
+On a more speculative note, we present a plausibly practical mechanism for the repeated setting that is  efficient and truthfull.
+%this is going to need a condition along the line of the 
 
 %Lykouris, http://arxiv.org/pdf/1505.00391.pdf
 % The current best adaptive learning algorithm is a natural adaptation of the classical Hedge
