--- a/dmarket.bib
+++ b/dmarket.bib
@@ -4,6 +4,15 @@
 
 %% Created for Nikete at 2016-08-18 10:58:21 +0200 
 
+@inproceedings{li2011unbiased,
+  title={Unbiased offline evaluation of contextual-bandit-based news article recommendation algorithms},
+  author={Li, Lihong and Chu, Wei and Langford, John and Wang, Xuanhui},
+  booktitle={Proceedings of the fourth ACM international conference on Web search and data mining},
+  pages={297--306},
+  year={2011},
+  organization={ACM}
+}
+
 @article{erikson2008political,
   title={Are political markets really superior to polls as election predictors?},
   author={Erikson, Robert S and Wlezien, Christopher},
