added the bids and signals no priors mech

--- a/dmarket.bib
+++ b/dmarket.bib
@@ -4,6 +4,16 @@
 
 %% Created for Nikete at 2016-08-18 10:58:21 +0200 
 
+@article{caragiannis2015bounding,
+  title={Bounding the inefficiency of outcomes in generalized second price auctions},
+  author={Caragiannis, Ioannis and Kaklamanis, Christos and Kanellopoulos, Panagiotis and Kyropoulou, Maria and Lucier, Brendan and Leme, Renato Paes and Tardos, Eva},
+  journal={Journal of Economic Theory},
+  volume={156},
+  pages={343--388},
+  year={2015},
+  publisher={Elsevier}
+}
+
 @inproceedings{li2011unbiased,
   title={Unbiased offline evaluation of contextual-bandit-based news article recommendation algorithms},
   author={Li, Lihong and Chu, Wei and Langford, John and Wang, Xuanhui},
