--- a/market.tex
+++ b/market.tex
@@ -453,4 +453,7 @@ E[ ^{*}|c_i]  \geq E[ r^{*}|c_j] \text{ if }E[ ^{*}|a_i]  \geq E[ r^{*}|a_j]  \f
 %There is some extra flexibility more than no defiers which we should use, for example differential compliance rates for different actions, the mechanisms selects the action that most raises the reward not the one who has the highest reward (for example an action that has the second highest reward but 1\% noncompliance might be chosen instead of one  that has 99\% noncompliance and the highest reward. No defiers buys us the extra part that chosen is the highest reward action, so makes life easier for the subject (if the noncompliance depended on the signals the expert receives a utility maximizing decision maker would have to consider other decision markets noncomplaince characteristics in the prior before deciding how to interpret the chosen action; this removes such ambiguities and doesn't seem to loose too much generality)
 
 
+\subsection{Interpreting bids \& Recomending their Wishes}
+
+So far we have treated one space of actions $A$ for both $c$ and $a$. We now note that it may be advantageous for the mechanism to have elements in $A$ that are not available in $a$. In particular a \emph{as you wish} choice $c$ byt he algorithm, when the expert believes that hecannot add value relative to the private information of the subject. While in the signal case with common priors the signal report of the subject can be added initially (and used as part of the prior that sets the benchmark reward that is discounted from the realized reward in setting payments), there is no natural way to do this in the more realitic setting whre the subject and experts do not share a prior.   
 
